--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
     <title>W. Challenge</title>
 </head>
 <body>
     <header id="uni-header">
         <nav id="uni-nav" class="inter-300-15">
-            <a href="/index.html"><div class="uni-logo"></div></a>
+            <a href="index.html"><div class="uni-logo"></div></a>
             <ul>
                 <li><a href="https://www.google.com/" target="_blank">Home</a></li>
                 <li><a href="https://www.google.com/" target="_blank">New</a></li>
@@ -26,7 +26,7 @@
             <section class="section1">
                 <!------<div class="main-img">
                 </div>-->
-                <img class="main-img" src="..//front-end-mentor/images/image-web-3-desktop.jpg">
+                <img class="main-img" src="image-web-3-desktop.jpg">
                 <header class="below-pic inter-800-30">
                     <h1>The Bright Future of Web 3.0?</h1>
                 </header>
@@ -57,7 +57,7 @@
         </div>
         <div id="container2">
                 <div class="one">
-                    <div class="img"><img src="/image-retro-pcs.jpg"></div>
+                    <div class="img"><img src="image-retro-pcs.jpg"></div>
                     <header class="header-width inter-400-17">
                         <h1>01</h1>
                         <h2>Reviving Retro PCs</h2>
@@ -65,7 +65,7 @@
                     </header>
                 </div>
                 <div class="two">
-                    <div class="img"><img src="/image-top-laptops.jpg"></div>
+                    <div class="img"><img src="image-top-laptops.jpg"></div>
                     <header class="header-width inter-400-17">
                         <h1>02</h1>
                         <h2>Top 10 Laptops of 2022</h2>
@@ -73,7 +73,7 @@
                     </header>
                 </div>
                 <div class="three">
-                    <div class="img"><img src="/image-gaming-growth.jpg"></div>
+                    <div class="img"><img src="image-gaming-growth.jpg"></div>
                     <header class="header-width inter-400-17">
                         <h1>03</h1>
                         <h2>The Growth of Gaming</h2>
